# test-api

./: .env  .gitignore  Makefile  docker-compose.yml  install.sh  pyproject.toml  readme.txt  setup.cfg
docker/: dockerfile
libs/database/: __init__.py
shift_service/: crud.py  database.py  models.py  schemas.py  security.py  server.py  settings.py
shift_service/api/: deps.py
shift_service/api/v1/: __init__.py
shift_service/api/v1/endpoints/: shifts.py  users.py
tests/: main_test.py
